--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 		<div class="header-text">
 			<h1>ANDRÉ & VANESSA</h1>
 			<div class="vertical-line"></div>
-			<p>
+			<h1>ANIVERSÁRIO DE</h1>
+			<h1 id="contador">
 				COMEMORAÇÃO DO NOSSO ANIVERSÁRIO DE NAMORO 
 				<br />
-				HOJE FAZEMOS <h1>4 MESES E 3 DIAS</h1>
 			</p>
+			<script src="js/contador.js"></script>
 		</div><!-- End HeaderText -->
 	</div><!-- End homeFullScreen -->
 </header><!-- End Header -->
